<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/blue_brey"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:typeface="monospace" />
    
    <Button
        android:id="@+id/newPlayerButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="clickNewPlayer"
        android:text="@string/new_player"
        android:textSize="20sp" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="clickStartNewGame"
        android:text="@string/start_game"
        android:textSize="20sp" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="clickHelp"
        android:text="@string/help"
        android:textSize="20sp" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:onClick="clickExit"
        android:text="@string/exit"
        android:textSize="20sp" />

</LinearLayout>