<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/input_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:textColor="@color/blue_brey"
        android:text="@string/input_player"/>

    <EditText
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:background="@color/grey_50"
        android:ems="20"
        android:hint="@string/tip_player"
        android:inputType="text"
        android:textSize="20sp"
        android:maxLength="20" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_player"
        android:background="@drawable/custom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:onClick="onClickConfirm"
        android:text="@string/lbl_confirm"
        android:textSize="15sp" />

</LinearLayout>
